# code-base

./: .gitignore  README.md
clojure/learnclojure/: CHANGELOG.md  README.md  project.clj
cpp/plaza/: CMakeLists.txt  CMakePresets.json
cpp/plaza/catch2/: CMakeLists.txt  help.cpp
cpp/plaza/plaza/: CMakeLists.txt  plaza.cpp  plaza.h
csharp/MordenConsoleApp/: MordenConsoleApp.sln
csharp/MordenConsoleApp/MordenConsoleApp/: GreetingService.cs  IGreetingService.cs  MordenConsoleApp.csproj  Program.cs  appsettings.toml
csharp/algorithm/: Algorithm In Csharp.sln
csharp/algorithm/AlgorithmProblem/: NQueen.cs
csharp/algorithm/DataStructures/: BinaryTree.cs  Program.cs
csharp/algorithm/LeetCodeCSharp/: LeetCode_233.cs  LeetCode_297.cs  LeetCode_46.cs  Program.cs
csharp/design-pattern/: DesignPatterns.sln
csharp/design-pattern/Behavior.Command/: Program.cs
csx/: Akv_Cert_Download.csx  example.env.ini  ini.csx  parallel-http-request.csx  reference.csx  tmpl.csx
csx/azure/: AKV_Cert_Credential.csx  AKV_Retrieve.csx
deploy/vm/: README.md  docker-compose.yml
fsharp/: fsharp in one file.fsx
fsharp/GenericHost/: LifetimeEventsHostedService.fs  Program.fs  README.md  TimedHostedService.fs  generic-host.fsproj  generic-host.sln  paket.dependencies  paket.references
fsx/: tmpl.fsx
golang/concurrency/: main.go
golang/error/: main.go
golang/network/: go.mod  main.go  summary.md
golang/project-template/: go.mod  go.sum
golang/slide-window/: go.mod  main.go  slide.go
java/: build.gradle.kts  settings.gradle.kts
manner/notebook/: hello.ipynb
(+41 files in other folders)
